--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.8",
+    "@radix-ui/react-tabs": "^1.1.13",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "react": "19.2.3",
