--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.8",
+    "@mui/x-date-pickers": "^8.27.2",
     "@radix-ui/react-tabs": "^1.1.13",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.2",
     "react-dom": "19.2.3",
     "swiper": "^12.1.2"
   },
